--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta name="description" content="Little Lemon is a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
     <meta name="og:title" content="Little Lemon Restaurant"/>
     <meta name="og:description" content="Little Lemon is a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
-    <meta name="og:image" content="%PUBLIC_URL%/logo192.png"/>
+    <meta name="og:image" content="%PUBLIC_URL%/little_lemon_favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/little_lemon_favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/little_lemon_favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
