--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     -->
     <title>Little Lemon Restaurant</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
