--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
     -->
     <title>Little Lemon Restaurant</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="%PUBLIC_URL%/api.js"></script>
   </body>
 </html>
